syntax="proto3";

package company;

option go_package="/company;cp";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Company Service";
      version: "1.0";
      description: "Purpose of the service is searching for company by INN";
    };
    schemes: HTTP;
    host: "localhost:9090"
    consumes: "application/json";
    produces: "application/json";
};

message CompanyByBinRequest {
    string bin = 1;
}

message CompanyByBinResponse {
    string name = 3;
}

message ErrorNotFound {
    string msg = 1;
}

message Error {
    string msg = 1;
}

service CompanyService {
    rpc CompanyByBin (CompanyByBinRequest) returns (CompanyByBinResponse) {
        option (google.api.http) = {
            get: "/api/v1/companies/{bin}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get company by INN";
            operation_id: "CompanyByBin";
            tags: "Company";
            responses: {
                key: "200"
                value: {
                    description: "Company is found"
                    schema: {
                        json_schema: {
                            ref: ".company.CompanyByIINResponse"
                        }
                    }
                }
            }
            responses: {
                key: "404"
                value: {
                    description: "Company is not found"
                    schema: {
                        json_schema: {
                            ref: ".company.ErrorNotFound"
                        }
                    }
                }
            }
            responses: {
                key: "500"
                value: {
                    description: "Internal server error"
                    schema: {
                        json_schema: {
                            ref: ".company.Error"
                        }
                    }
                }
            }
        };
    }
}